Fix tests, accidental +caseId still remaining, clean a little, and add EmailService tests