@@ -22,6 +22,7 @@ import uk.gov.hmcts.et.common.model.ccd.items.RespondentSumTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.types.ReferralType;
 import uk.gov.hmcts.et.common.model.ccd.types.RespondentSumType;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.ReferralHelper;
+import uk.gov.hmcts.ethos.replacement.docmosis.service.DocumentManagementService;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.ReferralService;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.UserService;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.VerifyTokenService;
@@ -30,7 +31,6 @@ import uk.gov.hmcts.ethos.utils.CCDRequestBuilder;
 import uk.gov.hmcts.ethos.utils.CaseDataBuilder;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -59,6 +59,10 @@ class ReplyToReferralControllerTest {
     private VerifyTokenService verifyTokenService;
     @MockBean
     private UserService userService;
+    @MockBean
+    private ReferralService referralService;
+    @MockBean
+    private DocumentManagementService documentManagementService;
     @Autowired
     private MockMvc mockMvc;
     @Autowired
@@ -100,7 +104,7 @@ class ReplyToReferralControllerTest {
                 .build();
 
         UserDetails userDetails = new UserDetails();
-        userDetails.setRoles(Arrays.asList("role1"));
+        userDetails.setRoles(List.of("role1"));
         when(userService.getUserDetails(any())).thenReturn(userDetails);
     }
 
